--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <link rel="icon" type="image/x-icon" href="./logo-boolean.ico" />
   </head>
   <body>
-    <div class="wrapper">
-      <div class="top">
-        <div class="nav-bar"></div>
-        <div class="main-section">
-          <div class="header-app"></div>
-          <div class="main-content"></div>
-        </div>
-      </div>
+    <div class="container">
+      <div class="nav-bar"></div>
 
-      <footer class="footer-app"></footer>
+      <div class="main-section">
+        <div class="header-app"></div>
+        <div class="main-content"></div>
+      </div>
     </div>
+
+    <footer>
+      <div class="footer"></div>
+    </footer>
   </body>
 </html>
