--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
   </head>
   <body>
     <div class="container">
-      <div class="nav-bar"></div>
+      <div class="nav-bar">
+        <div class="logo">
+          <img class="img-logo" src="./img/img/logo-small.svg" alt="logo" />
+        </div>
+        <ul class="nav-item">
+          <li>
+            <img src="./img/img/home.svg" alt="" />
+          </li>
+          <li>
+            <img src="./img/img/search.svg" alt="" />
+          </li>
+          <li>
+            <img src="./img/img/libreria.svg" alt="" />
+          </li>
+        </ul>
+
+        <div class="footer-sidebar">
+          <img src="./img/img/download.svg" alt="" />
+          <img src="./img/img/profile.svg" alt="" />
+        </div>
+      </div>
 
       <div class="main-section">
         <div class="header-app"></div>
