try to add content nav-bar

--- a/index.html
+++ b/index.html
@@ -41,27 +41,22 @@
               <img class="img-logo" src="./img/img/libreria.svg" alt="" />
               <span class="name-item">La tua libreria</span>
             </li>
+            <li class="name-pl-header">
+              <h3 class="title-playlist">Playlist</h3>
+            </li>
+            <li class="name-playlist">
+              <i class="fa-solid fa-square-plus" style="color: #c0c0c0"
+                ><span class="name-plus">Crea una playlist</span></i
+              >
+            </li>
+            <li class="name-playlist">Nome Playlist</li>
+            <li class="name-playlist">Nome Playlist</li>
+            <li class="name-playlist">Nome Playlist</li>
+            <li class="name-playlist">Nome Playlist</li>
+            <li class="name-playlist">Nome Playlist</li>
+            <li class="name-playlist">Nome Playlist</li>
+            <li class="name-playlist">Nome Playlist</li>
           </ul>
-        </div>
-
-        <div class="playlist-box">
-          <h1 class="title-playlist">Playlist</h1>
-
-          <div class="main-playlist">
-            <ul>
-              <li>
-                <i class="fa-sharp-duotone fa-solid fa-plus"></i>
-                <span class="name-playlist">Crea Playlist</span>
-              </li>
-              <li class="name-playlist">Nome Playlist</li>
-              <li class="name-playlist">Nome Playlist</li>
-              <li class="name-playlist">Nome Playlist</li>
-              <li class="name-playlist">Nome Playlist</li>
-              <li class="name-playlist">Nome Playlist</li>
-              <li class="name-playlist">Nome Playlist</li>
-              <li class="name-playlist">Nome Playlist</li>
-            </ul>
-          </div>
         </div>
 
         <div class="footer-sidebar">
