--- a/index.html
+++ b/index.html
@@ -91,48 +91,43 @@
     </div>
 
     <footer class="footer">
-      <!-- <div class="button-player-co">
-        <button>
+      <div class="button-player-co">
+        <button class="player-item">
           <i class="fa-solid fa-shuffle"></i>
         </button>
-        <button>
+        <button class="player-item">
           <i class="fa-solid fa-backward"></i>
         </button>
-        <button>
+        <button class="player-item">
           <i class="fa-solid fa-play"></i>
         </button>
-        <button>
+        <button class="player-item">
           <i class="fa-solid fa-forward"></i>
         </button>
-        <button>
+        <button class="player-item">
           <i class="fa-solid fa-repeat"></i>
         </button>
-      </div> -->
+      </div>
 
       <div class="progress-bar-co">
-        <div class="button-player-co">
-          <button>
-            <i class="fa-solid fa-shuffle"></i>
-          </button>
-          <button>
-            <i class="fa-solid fa-backward"></i>
-          </button>
-          <button>
-            <i class="fa-solid fa-play"></i>
-          </button>
-          <button>
-            <i class="fa-solid fa-forward"></i>
-          </button>
-          <button>
-            <i class="fa-solid fa-repeat"></i>
-          </button>
-        </div>
-
         <span class="current-time">0:25</span>
         <div class="progress-bar">
           <div class="progress"></div>
         </div>
         <span class="total-time">4:35</span>
+      </div>
+
+      <div class="bar-button-co">
+        <button>
+          <i class="fa-solid fa-list"></i>
+        </button>
+        <button>
+          <i class="fa-solid fa-desktop"></i>
+        </button>
+        <button>
+          <i class="fa-solid fa-volume-high"></i>
+        </button>
+        <div class="progress-bar"></div>
       </div>
     </footer>
   </body>
