try to finish footer

--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
       </div>
 
       <div class="bar-button-co">
-        <button>
+        <button class="player-item">
           <i class="fa-solid fa-list"></i>
         </button>
-        <button>
+        <button class="player-item">
           <i class="fa-solid fa-desktop"></i>
         </button>
-        <button>
+        <button class="player-item">
           <i class="fa-solid fa-volume-high"></i>
         </button>
         <div class="progress-bar"></div>
