--- a/index.html
+++ b/index.html
@@ -86,48 +86,82 @@
         <div class="header-app">
           <button class="header-button">Effettua l'upgrade</button>
         </div>
-        <div class="main-content"></div>
+        <div class="main-content">
+          <div class="upper-main">
+            <h5>In Evidenza</h5>
+            <h5>Podcast</h5>
+            <h5>Classifiche</h5>
+            <h5>Generi e Mood</h5>
+            <h5>Nuove Uscite</h5>
+            <h5>Scopri</h5>
+          </div>
+
+          <div class="playlist-title">
+            <h2>Recently Played</h2>
+          </div>
+        </div>
       </div>
     </div>
 
     <footer class="footer">
-      <div class="button-player-co">
-        <button class="player-item">
-          <i class="fa-solid fa-shuffle"></i>
-        </button>
-        <button class="player-item">
-          <i class="fa-solid fa-backward"></i>
-        </button>
-        <button class="player-item">
-          <i class="fa-solid fa-play"></i>
-        </button>
-        <button class="player-item">
-          <i class="fa-solid fa-forward"></i>
-        </button>
-        <button class="player-item">
-          <i class="fa-solid fa-repeat"></i>
-        </button>
-      </div>
-
-      <div class="progress-bar-co">
-        <span class="current-time">0:25</span>
-        <div class="progress-bar">
-          <div class="progress"></div>
+      <div class="song-footer">
+        <div class="song-container">
+          <img src="./img/img/sinister.jpeg" alt="" />
         </div>
-        <span class="total-time">4:35</span>
+        <div class="song-text">
+          <h5>Sinister</h5>
+          <h6>Brano Nome</h6>
+        </div>
+        <div class="song-icons">
+          <i class="fa-regular fa-heart" style="color: #c0c0c0"></i>
+          <i class="fa-regular fa-folder" style="color: #c0c0c0"></i>
+        </div>
       </div>
+      <div class="player-bar">
+        <div class="icons-co">
+          <div class="icon-co">
+            <i class="fa-solid fa-shuffle" style="color: #ffffff"></i>
+          </div>
 
-      <div class="bar-button-co">
-        <button class="player-item">
-          <i class="fa-solid fa-list"></i>
-        </button>
-        <button class="player-item">
-          <i class="fa-solid fa-desktop"></i>
-        </button>
-        <button class="player-item">
-          <i class="fa-solid fa-volume-high"></i>
-        </button>
-        <div class="progress-bar"></div>
+          <div class="icon-co">
+            <i class="fa-solid fa-backward-step" style="color: #ffffff"></i>
+          </div>
+          <div class="icon-co">
+            <i class="fa-regular fa-circle-play" style="color: #ffffff"></i>
+          </div>
+
+          <div class="icon-co">
+            <i class="fa-solid fa-forward-step" style="color: #ffffff"></i>
+          </div>
+
+          <div class="icon-co">
+            <i class="fa-solid fa-rotate-right" style="color: #ffffff"></i>
+          </div>
+        </div>
+        <div class="progress-bar-co">
+          <span class="current-time">0:25</span>
+          <div class="progress-bar">
+            <div class="progress"></div>
+          </div>
+          <span class="total-time">4:35</span>
+        </div>
+      </div>
+      <div class="player-item">
+        <div class="icon-co">
+          <i class="fa-solid fa-list" style="color: #ffffff"></i>
+        </div>
+        <div class="icon-co">
+          <i class="fa-solid fa-desktop" style="color: #ffffff"></i>
+        </div>
+        <div class="icon-co">
+          <i class="fa-solid fa-volume-high" style="color: #ffffff"></i>
+        </div>
+
+        <div class="progress-bar-co">
+          <div class="progress-bar">
+            <div class="progress"></div>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
