--- a/index.html
+++ b/index.html
@@ -87,17 +87,38 @@
           <button class="header-button">Effettua l'upgrade</button>
         </div>
         <div class="main-content">
-          <div class="upper-main">
-            <h5>In Evidenza</h5>
-            <h5>Podcast</h5>
-            <h5>Classifiche</h5>
-            <h5>Generi e Mood</h5>
-            <h5>Nuove Uscite</h5>
-            <h5>Scopri</h5>
+          <div class="card-playlist">
+            <img src="./img/img/metal_lifting.jpg" alt="" />
+            <h3>Heavy Metal</h3>
+            <h5>Subtitle</h5>
           </div>
-
-          <div class="playlist-title">
-            <h2>Recently Played</h2>
+          <div class="card-playlist">
+            <img src="./img/img/stranger.jpeg" alt="" />
+            <h3>
+              Stranger Things, Vol.1 <br />
+              (A Netflix Original <br />Series Soundtrack)
+            </h3>
+            <h5>Kyle Dixon & Michael Stein</h5>
+          </div>
+          <div class="card-playlist">
+            <img src="./img/img/aquietplace.jpeg" alt="" />
+            <h3>A quiet place</h3>
+            <h5>Subtitle</h5>
+          </div>
+          <div class="card-playlist">
+            <img src="./img/img/split.jpeg" alt="" />
+            <h3>Split</h3>
+            <h5>Subtitle</h5>
+          </div>
+          <div class="card-playlist">
+            <img src="./img/img/cure.jpeg" alt="" />
+            <h3>A cure of wellness</h3>
+            <h5>Subtitle</h5>
+          </div>
+          <div class="card-playlist">
+            <img src="./img/img/sinister.jpeg" alt="" />
+            <h3>Sinister</h3>
+            <h5>Subtitle</h5>
           </div>
         </div>
       </div>
